some responsive design fixes, and especially resolved react-materialize select input issue with functioning properly on mobile browsers. Yet it was working fine on web browsers, and on emulators when i tested. I didn't want to switch to the select browser-default and lose the nice material design appeal. i've considered using materializeUi in the future. It's not yet as feature rich as materialize for now. Should check it out again. maybe there's been some newly added features.

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -106,7 +106,11 @@ nav li a {
 }
 
 
+/* Forms onchange activator for mobile browsers */
 
+.cursorP {
+    cursor: pointer;
+}
 
 
 /* custom blockquote */
